welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:18: error: reassignment to val
	case _ => litMessage = true;
                             ^